# FugakuCarcinogenisis

./: .gitignore  CMakeLists.txt  Makefile  comboTree.c  fsub.sh  graphSparsity.cpp  graphSparsity_2hit_lambda.cpp  graphSparsity_3hit.cpp  graphSparsity_3hit_lambda.cpp  graphSparsity_3hit_loadBalance.cpp  graphSparsity_3hit_mpi.cpp  graphSparsity_3hit_mpi_loadBalance.cpp  mpi_custom_op.c  mpi_scan_test.c  omptest.cpp  process_gene_data.py  smallInput_5genes.txt
data/: ACC.combinedData_sorted_bin.txt.gene_map  TestNotebook.ipynb  process_gene_data.py  setCoverPrunedData_small.txt  smallInput_5genes.txt  small_ACC.combinedData_sorted.txt  small_ACC.combinedData_sorted_bin.txt  small_ACC.combinedData_sorted_bin.txt.gene_map
include/: carcUtils.h  commons.h  constants.h  eightHit.h  fiveHit.h  fourHit.h  four_hit.h  mpi_specific.h  multiHit.h  nineHit.h  readFile.h  set_ops.h  sets.h  sevenHit.h  sixHit.h  threeHit.h  twoHit.h  utils.h  utilsTest.cpp
profile/: run_compute.sh  run_login.sh
runScripts/: .gitignore  3hit_WSCRun.sh  3hit_run.sh  3hit_sparsifyRun.sh  4hit_job_submit.sh  compileRun.sh  dynamicNode_4hit_fsub.sh  dynamicNode_4hit_fsub_cp.sh  dynamicNode_4hit_omp_ACC_fsub.sh  dynamicNode_4hit_omp_fsub.sh  dynamicNode_5hit_fsub.sh  dynamicNode_5hit_omp_ACC_fsub.sh  dynamicNode_5hit_omp_fsub.sh  dynamicNode_6hit_fsub.sh  dynamicNode_6hit_omp_ACC_fsub.sh  dynamicNode_6hit_omp_fsub.sh  fsub.sh  mass_submit_2hit_cancer_job.sh  mass_submit_3hit_cancer_job.sh  mass_submit_4hit_cancer_jobs.sh  mass_submit_5hit_cancer_jobs.sh  mass_submit_6hit_cancer_jobs.sh  mass_submit_7hit_cancer_jobs.sh  mass_submit_8hit_cancer_jobs.sh  mass_submit_9hit_cancer_jobs.sh  mass_submit_allhit_differentChunk_jobs.sh  run.sh  small_omp_test.sh  submit_4hit.sh
setcover/: 3hitCombination.cpp  3hitCombination_omp.cpp  4hitCombination  4hitCombination.cpp
setcover/summit-set-cover/src/: WSC_3hit  WSC_3hit.cpp
sparsification/: Makefile  a.out  dataSparsity.cpp  dataSparsity_2hit.cpp  dataSparsity_3hit.cpp  dataSparsity_3hit_lambda.cpp  dataSparsity_3hit_loadBalance.cpp  dataSparsity_3hit_withOMP.cpp  dataSparsity_4hit.cpp  dataSparsity_4hit_omp.cpp  dataSparsity_5hit.cpp  dataSparsity_5hit_omp.cpp  dataSparsity_6hit.cpp  dataSparsity_6hit_omp.cpp
sparsification/output.35982808/0/1/: stdout.1.0
src/: 4hits.c  convertIndexToGeneName.py  data.c  data.h  dataSparsity_4hit.cpp  eightHit.cpp  fiveHit.cpp  fourHit.cpp  four_hit.cpp  main.cpp  main_gdb.cpp  mpi_specific.cpp  mpi_test  mpi_test.cpp  multiHit.cpp  nineHit.cpp  readFile.cpp  sevenHit.cpp  sixHit.cpp  threeHit.cpp  twoHit.cpp  utils.cpp  verifyAccuracy.py
utils/: process_gene_data.py
